# setuptools_scm_about

./: .appveyor.yml  .travis.yml  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tests.py
setuptools_scm_about/: __init__.py
