[metadata]
name = setuptools_scm_about
url = https://github.com/GreatFruitOmsk/setuptools_scm_about
author = GreatFruit
author_email = info@greatfruit.org
maintainer = Ilya Kulakov
maintainer_email = ilya@greatfruit.org
classifiers =
   Development Status :: 5 - Production/Stable
   Framework :: Setuptools Plugin
   Intended Audience :: Developers
   Topic :: Software Development :: Build Tools
   License :: OSI Approved :: MIT License
license = MIT
description = setuptools_scm plugin to use version from __about__.py
long_description = file: README.rst
keywords = setuptools, setuptools_scm, scm, vcs, version

[options]
packages = setuptools_scm_about
zip_safe = True

[bdist_wheel]
universal=1

[tool:pytest]
testpaths=tests.py

[flake8]
max-line-length = 120
